refactor: springboot integration (#346)